--- a/viewer/package.json
+++ b/viewer/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
+    "mysql": "^2.16.0",
     "popper.js": "^1.14.7"
   },
   "devDependencies": {}
